r319 (24. 03. 2025):
Added options "Persistent Damage Immunity", "Persistent Damage Immunity Cooldown" and "Persistent Dealing Damage - Armor Regen Cooldown"
Added option "Show Floating Health Bars for Regular and Special Enemies and Turrets"
Berserker Buff: Buff will stay on the screen only if you have a melee or damage boost and text format is set to one of the boosts
Menu: Fixed visual issues with "Money" tracker
Slaughterhouse: Fixed incorrect number of loot on Very Hard or below
Poco Health Float Style: Improved memory and performance by preloading health floats for Converts and Turrets

r318 (22. 03. 2025):
Added "Money" tracker
Added support for "Classic Heisting" mod
Fixed an issue where timed loot zone trackers are not visible (regression from r303)
Fixed an issue where completion color animation is not playing correctly on Timer trackers
Jewelry Store: Fixed an issue where random loot is not sometimes properly reflected in the Loot Counter
Jewelry Store: Reworked escape waypoints to show less "Car" icon when the escape vehicle arrived

r317 (17. 03. 2025):
Green Bridge: Fixed a crash as a client on scaffolding

r316 (12. 03. 2025):
Poco Health and Damage Float: Fixed an issue where floats are visible when in-game hud is turned off

r315 (08. 03. 2025):
Berserker Buff: Made buff more accurate
Berserker Buff: Fixed melee damage showing weapon damage in multiplier format
Loot Waypoint: Fixed a crash when waypoints are not defined
Menu: Fixed issues with a controller

r314 (07. 03. 2025):
Converts Tracker: Fixed a possible crash after trading your convert and then going into custody a few seconds later
Added options "Berserker Text Format", "Persistent Continuous Armor Regen" and "Show Loot Waypoint"
Fixed synced mission trackers not appearing correctly when mission trackers are disabled and mission waypoints are enabled
Moved all related Loot Counter code to shared class, so tracker and waypoint can use it