@@ -56,7 +56,7 @@
                     "value": "x_offset",
                     "default_value": 0,
                     "max": 1920,
-                    "min": 0,
+                    "min": -1920,
                     "step": 0
                 }
             ]
@@ -88,7 +88,7 @@
                     "default_value": 150,
                     "max": 1080,
                     "min": 0,
-                    "step": 0
+                    "step": -1080
                 }
             ]
         },
